fix cross browser layout problem

--- a/static/css/registerForm.css
+++ b/static/css/registerForm.css
@@ -24,10 +24,10 @@
 }
   
 .check-box input:checked + .check-text:before {
-    content: '\2714';
-    color: #ffffff;
-    right: 10px;
-    background-color: #f57aa7;
+    content: '';
+    /* color: #ffffff; */
+    /* right: 10px; */
+    background: url('data:image/svg+xml;utf8,<svg fill="%23ffffff" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 512 512"><path d="M362.6 192.9L345 174.8c-.7-.8-1.8-1.2-2.8-1.2-1.1 0-2.1.4-2.8 1.2l-122 122.9-44.4-44.4c-.8-.8-1.8-1.2-2.8-1.2-1 0-2 .4-2.8 1.2l-17.8 17.8c-1.6 1.6-1.6 4.1 0 5.7l56 56c3.6 3.6 8 5.7 11.7 5.7 5.3 0 9.9-3.9 11.6-5.5h.1l133.7-134.4c1.4-1.7 1.4-4.2-.1-5.7z"/></svg>') center center / 35px 35px no-repeat  #f57aa7;
 }
 
 .btn:disabled {
@@ -38,7 +38,7 @@
     box-shadow: none;
 }
 
-select, input {
+select {
     appearance: none;
     -moz-appearance: none;
     -webkit-appearance: none;
